KCINFR-978: making jetty-run forked work